# Travel-Planner

./: .gitignore  README.md  agent.py  app.py  graph.py  logger.py  main.py  pyproject.toml  state.py  styles.css  test_chat.py  tools.py
backend/: __init__.py  server.py
backend/core/: __init__.py  graph.py  stream_formatter.py
backend/models/: schemas.py
backend/routes/: chat.py
prompts/: booking_agent.md  research_agent.md  supervisor.md
serpapi_results/: flights_results.json  hotels_results.json  local_results.json
serpapi_schemas/: google-hotels-amenities.json  google-hotels-property-types.json  google-hotels-vacation-rentals-amenities.json  google-hotels-vacation-rentals-property-types.json  google_flights.json  google_hotels.json  google_local.json
utils/: __init__.py  logger.py  map_renderer.py
