[project]
name = "travel-planner"
version = "0.1.0"
description = "AI Travel Planner Agent powered by LangGraph & Gemini"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "langchain",
    "langgraph",
    "langchain-google-genai",
    "serpapi",
    "streamlit",
    "pydantic",
    "python-dotenv",
    "rich",
]
